# lsdoc

./: .gitignore  AST.md  BACKLOG.md  CLAUDE.md  Cargo.toml  DECISIONS.md  DESIGN-lsdoc-v2.md  DIVERGENCES.md  FOR-TINE.md  GH209-UNOWNED-MD-INPUT-INVESTIGATION.md  PLAN-v0.3.0-deterministic-O-n.md  README.md  RENDER-PARITY-AND-INTEGRATION.md  SPEC.md  TINE-INLINE-PARSE.md  TINE-INTEGRATION-PREREQS.md  TINE-RENDER-GAPS.md  TINE-UPGRADE-v0.1.4.md  V2-REAL-GRAPH-DIVERGENCES.md
bench/: .gitignore  Cargo.toml  README.md  fetch-corpus.sh
bench/src/: main.rs
bootstrap/: FINDINGS.md  README.md
docs/: INLINE-DESIGN.md  LINEARITY.md  V2-PARITY-CLOSURE-EXECUTION-PLAN.md  V2-SYSTEMATIC-PARITY-AUDIT.md  V2-TRANSCRIPTION.md
harness/: allowlist.json  audit-v2-shortcuts.mjs  audit2-correctness-probe.json  audit2-r2-probe.json  audit2-r2-verify-my.json  audit2-verify-my.json  audit3-probe.json  blockgate.mjs  c1-my-probe.json  c2-links-probe.json  c2-my-probe.json  c3-my-probe.json  c4-my-probe.json  c5-my-probe.json  c6-my-probe.json  c6-round2-url-punct.json  c7-my-probe.json  c7-my2-probe.json  compare.mjs  corpus.blockgate.json  corpus.blocks.gen.mjs  corpus.blocks.json  corpus.gen.mjs  corpus.inline.gen.mjs  corpus.inline.json  corpus.json  corpus.mined.gen.mjs  corpus.mined.json  corpus.org.gen.mjs  corpus.org.json  corpus.org.mined.gen.mjs  corpus.org.mined.json  corpus.org.real.gen.mjs  corpus.real.gen.mjs  d19-my-probe.json  d20-d21-my-probe.json  d22-blankline-probe.json  d22-case-extra.json  d22-floor-probes.json  d22-my-probe.json  (+113 more)
scripts/: env.sh
src/: block_common.rs  entities.rs  inline.rs  lib.rs  (+11 more)
(+27 files in other folders)
