[package]
name = "lsdoc"
version = "0.4.1"
edition = "2021"
license = "AGPL-3.0-only"
description = "A from-scratch native-Rust parser for Logseq-flavored Markdown and Org, behavior-equivalent to Logseq's mldoc."
repository = "https://github.com/martinkoutecky/lsdoc"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
